<resources>
  <string name="app_name">Tropos</string>

  //directions
  <string name="no_direction"></string>
  <string name="north_abbrev">N</string>
  <string name="north_east_abbrev">NE</string>
  <string name="east_abbrev">E</string>
  <string name="south_east_abbrev">SE</string>
  <string name="south_abbrev">S</string>
  <string name="south_west_abrrev">SW</string>
  <string name="west_abbrev">W</string>
  <string name="north_west_abbrev">NW</string>

  //main
  <string name="formatted_temperature_string">%1$d&#xb0; / %2$d&#xb0; / %3$d&#xb0;</string>
  <string name="formatted_imperial_wind_string">%1$d mph %2$s</string>
  <string name="formatted_metric_wind_string">%1$d km/h %2$s</string>
  <string name="temperature">%d&#xb0;</string>
  <string name="dark_sky_credit">Powered by Dark Sky</string>
  <string name="thoughtbot">thoughtbot</string>
  <string name="missing_location_permission_error">🙅🏾 🙅🏼 🙅🏻\n\nLocation sharing is turned off. \n\nEnable location sharing in Settings to help us give you the most accurate weather predictions</string>
  <string name="generic_error_message">🙅🏾 🙅🏼 🙅🏻\n\n%s</string>

  //toolbar
  <string name="updated_at">Updated at %s</string>
  <string name="checking_weather">Checking Weather&#8230;</string>
  <string name="update_failed">Update Failed</string>

  //time of day
  <string name="present_night">tonight</string>
  <string name="present_morning">this morning</string>
  <string name="present_day">today</string>
  <string name="present_afternoon">this afternoon</string>
  <string name="previous_night">last night</string>
  <string name="previous_morning">yesterday morning</string>
  <string name="previous_day">yesterday</string>
  <string name="previous_afternoon">yesterday afternoon</string>

  //temperature difference
  <string name="colder">colder</string>
  <string name="cooler">cooler</string>
  <string name="same">same</string>
  <string name="warmer">warmer</string>
  <string name="hotter">hotter</string>

  //temperature formats
  <string name="different_temperature_format" formatted="false">It\'s %s %s than %s.</string>
  <string name="same_temperature_format" formatted="false">It\'s the %s %s as %s.</string>

  //settings
  <string name="metric">Metric</string>
  <string name="imperial">Imperial</string>
  <string name="info">info</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="settings_menu">Settings</string>
  <string name="settings_activity_title">Settings</string>
  <string name="handcrafted_with_love_by_thoughtbot">Handcrafted with 💜 by thoughtbot</string>
  <string name="close">Close</string>
  <string name="unit_system">unit system</string>
</resources>
